# termplot

./: Cargo.toml  Cargo.toml.bak  README-SP.md  README.md  README.md.bak  README.md2.bak  flake.nix  justfile
benches/: canvas_benchmark.rs
examples/: 3dengine.rs  barcentertext.rs  betasolarsystem_kepler.rs  demo.rs  figuresv2.rs  fireworks.rs  fireworksinterac.rs  fractal.rs  fractalmove.rs  math_strees.rs  plasma.rs  primitives_demo.rs  solarsystem_kepler.rs  solarsystemnobody.rs  sprite_demo.rs  system_monitor.rs  waves.rs
src/: canvas.rs  canvas.rs.bak  charts.rs  charts.rs.bak  lib.rs  main.rs  main.rs.bak  prelude.rs
