[package]
name = "termplot-rs"
version = "0.1.1"
edition = "2024"
description = "Una librería para renderizar gráficos en la terminal usando caracteres Braille."
license = "MIT" # O "MIT OR Apache-2.0"
repository = "https://github.com/sabbat-cloud/termplot"
readme = "README.md"
keywords = ["chart", "terminal", "braille", "plot"]
categories = ["command-line-interface", "visualization"]

[dependencies]
rand = "0.8"
colored = { version = "2.0", optional = true }
termplot = "0.1.1"

[features]
default = ["color"]
color = ["dep:colored"]

[dev-dependencies]
rand = "0.8"
